--- a/css/style.css
+++ b/css/style.css
@@ -400,6 +400,17 @@ article .love .maine_all .img_part .overlay p{
     color: black;
     font-family: 'Work Sans', sans-serif;
 }
+.our-work-title h1{
+    display: flex; 
+    align-items: center; 
+    justify-content: center;
+}
+.our-work-img{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 5px;
+    padding-bottom: 35px;
+}
 
 @media (max-width:576px) {
     
@@ -503,4 +514,11 @@ article .love .maine_all .img_part .overlay {
 	padding: 20px 10px;
 }
 
+.our-work-img{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    gap: 5px;
+    padding-bottom: 35px;
+    margin: 55px;
+}
 }
